1.0.5
literally a afk sistem, because why not